# snapchain

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  cliff.toml  docker-compose.mainnet.yml  docker-compose.read.yml  docker-compose.testnet.yml  docker-compose.yml
.github/workflows/: docs-check.yml  publish.yml  verify.yml
config/: perftest-sample.toml
scripts/: analyze-docs-gemini.sh  apply-doc-updates.sh  publish-image.sh
site/: .gitignore  README.md  package.json  vercel.json  vocs.config.tsx
site/docs/pages/: getting-started.mdx  index.mdx  whitepaper.mdx
site/docs/pages/guides/: migrating-to-snapchain.mdx  reading-messages.mdx  running-a-node.mdx  syncing-to-db.mdx  writing-messages.mdx
site/docs/pages/reference/datatypes/: events.md  message.md  messages.md  userdatatype.md
site/docs/pages/reference/grpcapi/: blocks.md  casts.md  events.md  fids.md  grpcapi.md  hubservice.md  links.md  message.md  metadata.md  onchain.md  reactions.md  storagelimits.md  userdata.md  usernameproof.md  verification.md
site/docs/pages/reference/httpapi/: casts.md  events.md  fids.md  httpapi.md  httpapi.mdx  info.md  links.md  message.md  onchain.md  reactions.md  storagelimits.md  (+3 more)
src/: background_jobs.rs  cfg.rs  lib.rs  main.rs
src/connectors/fname/: mod.rs
src/connectors/onchain_events/: mod.rs  tier_registry_abi.json
src/consensus/: consensus.rs  mod.rs  proposed_values_test.rs  proposer.rs  read_validator.rs  read_validator_test.rs  validator.rs
src/consensus/malachite/: host.rs  mod.rs  network_connector.rs  read_host.rs  read_node_actors_test.rs  read_sync.rs  snapchain_codec.rs  spawn.rs  spawn_read_node.rs
src/core/: error.rs  message.rs  types.rs  util.rs  validations.rs  validations_test.rs
src/core/validations/: cast.rs  cast_test.rs  error.rs  link.rs  link_test.rs  message.rs  message_test.rs  mod.rs  reaction.rs  reaction_test.rs  validations_test.rs  verification.rs
src/jobs/: block_pruning.rs  event_pruning.rs  mod.rs  snapshot_upload.rs
src/mempool/: mempool.rs  mempool_test.rs  mod.rs  rate_limits_test.rs  routing.rs
src/network/: admin_server.rs  gossip.rs  gossip_test.rs  http_server.rs  http_server_test.rs  mod.rs  rpc_extensions.rs  server.rs  server_tests.rs
src/node/: mod.rs  snapchain_node.rs  snapchain_read_node.rs
src/perf/: engine_only_perftest.rs  gen_multi.rs  gen_single.rs  generate.rs  perftest.rs  trie_only_perftest.rs
src/proto/: admin_rpc.proto  blocks.proto  hub_event.proto  message.proto  node_state.proto  replication.proto  request_response.proto  rpc.proto
src/replication/: error.rs  mod.rs  replication_engine.rs  replication_engine_tests.rs  replication_server.rs  replication_stores.rs  replicator.rs
src/storage/: constants.rs
src/storage/db/: backup.rs  mod.rs  multi_chunk_writer.rs  rocksdb.rs  snapshot.rs
src/storage/store/: block.rs  engine.rs  engine_tests.rs  ingest_state.rs  mod.rs  node_local_state.rs  node_local_state_tests.rs  shard.rs  stores.rs  stores_test.rs  test_helper.rs
src/storage/store/account/: cast_store.rs  event.rs  link_store.rs  message.rs  name_registry_events.rs  on_chain_event_store_tests.rs  onchain_event_store.rs  reaction_store.rs  store.rs  user_data_store.rs  username_proof_store.rs  verification_store.rs
src/storage/trie/: commit_rollback_tests.rs  merkle_trie.rs  merkle_trie_tests.rs  trie_node.rs  trie_node_tests.rs  util.rs
src/tests/: cfg_test.rs
src/utils/: cli.rs  factory.rs  statsd_wrapper.rs
src/version/: version.rs
tests/: consensus_test.rs
